fix: remove visible scrollbar on tables

--- a/resources/css/components/table-management.css
+++ b/resources/css/components/table-management.css
@@ -51,6 +51,10 @@ tr td {
 }
 
 @media (min-width: 768px) {
+    .table-wrapper {
+        overflow: auto;
+    }
+
     th {
         padding: 1.15rem;
     }
